<resources>
    <string name="app_name">DH-Showroom</string>
    <string name="app_version">1.0</string>
    <string-array name="credits">
        <item>Merlin Baudert</item>
        <item>Rino Grupp</item>
        <item>Leunar Kalludra</item>
        <item>Hannes Kececi</item>
        <item>Jonathan Lessing</item>
        <item>Leopold Ormos</item>
        <item>Lukas Schult</item>
        <item>Marcel Vetter</item>
        <item>Frederik Wagner</item>
    </string-array>
    <string name="action_settings">Administrator-Modus</string>
    <string name="action_settings2">User-Modus</string>
    <string name="action_settings3">Beenden</string>
    <string name="action_settings4">Neuer Block</string>
    <string name="title_activity_login">Sign in</string>
    <string name="passwort">3199823091</string>
    <string name="title_activity_screensaver">screensaver</string>
    <string name="screensaver_delay">600000</string>
    <string name="newBlock_upperSubblock">Oberer Teil</string>
    <string name="newBlock_lowerSubblock">Unterer Teil</string>
    <string name="image">Bild</string>
    <string name="text">Text</string>
    <string name="subtitle">Untertitel</string>
    <string name="dialog_btnAdd">Hinzufügen</string>
    <string name="dialog_btnCancel">Abbrechen</string>
    <string name="dialog_title">Teilblocktypen auswählen</string>
    <string name="chooseImageFile">Bild laden</string>
    <string name="projectName">Projektname</string>
    <string name="blockTitle">Blocktitel</string>
    <string name="about">Über</string>
    <string-array name="planets_array">
        <item>Elektrotechnik</item>
        <item>Informatik</item>
        <item>Maschinenbau</item>
        <item>Mechatronik</item>
        <item>Andere</item>
    </string-array>
</resources>
