<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="robertboschgmbh.test.MainActivity" >

    <item android:id="@+id/new_button"
        android:title="Neues Projekt"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/user_button"
        android:title="@string/action_settings2"
        android:orderInCategory="200"
        app:showAsAction="never" />
    <item android:id="@+id/menu_item_about"
        android:title="@string/about"
        android:orderInCategory="300"
        app:showAsAction="never" />
    <item android:id="@+id/end_button"
        android:title="@string/action_settings3"
        android:orderInCategory="400"
        app:showAsAction="never" />

</menu>
